# Turing-Machine-Language

./: CMakeLists.txt  ReadMe.md  main.cpp
info/: Contract TO groep MB.ods
json/: json.hpp
src/CFG/: GrammarRule.cpp  GrammarRule.h  Symbol.cpp  Symbol.h
src/GUI/: GUI.cpp  GUI.h  Window.cpp  Window.h
src/abstractSyntaxTree/: ASTNode.cpp  ASTNode.h  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h
src/exporter/: AbstractExporter.cpp  AbstractExporter.h
src/lexer/: Lexer.cpp  Lexer.h
src/multitapeTuringMachine/: MultitapeTuringMachine.cpp  MultitapeTuringMachine.h  mtmState.cpp  mtmState.h
src/parser/: AbstractParser.cpp  AbstractParser.h  ParsingTable.cpp  ParsingTable.h
src/productionRules/: productions-01.txt
src/turingMachine/: TuringMachine.cpp  TuringMachine.h  tmState.cpp  tmState.h
tests/: catch.cpp  catch.hpp  test.cpp  testUtils.cpp  testUtils.h
tests/testData/: test_dot_tm.txt  test_dot_tm2.txt  test_input02.input  test_input03.input  test_productions_00.cfgrules  test_productions_01.cfgrules  turingmachine.input
